--- a/index.ipynb
+++ b/index.ipynb
@@ -35,26 +35,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A=\n",
-      " [[1402  191]\n",
-      " [1371  821]\n",
-      " [ 949 1437]\n",
-      " [ 147 1448]]\n",
-      "B=\n",
-      " [[1 2 3]\n",
-      " [4 5 6]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Code Here"
+    "# Code Here\n",
+    "import numpy as np \n",
+    "A = np.array([[1402, 191], [1371, 821], [949, 1437], [147, 1448]]) \n",
+    "\n",
+    "B = np.array([[1, 2, 3], [4, 5, 6]]) "
    ]
   },
   {
@@ -66,20 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of A: (4, 2)\n",
-      "Shape of B: (2, 3)\n"
+      "(4, 2)\n",
+      "(2, 3)\n"
      ]
     }
    ],
    "source": [
-    "# Code Here"
+    "# Code Here\n",
+    "print(A.shape)\n",
+    "print(B.shape)"
    ]
   },
   {
@@ -95,22 +86,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1402\n",
-      "191\n",
-      "1437\n",
-      "147\n"
-     ]
+     "data": {
+      "text/plain": [
+       "821"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Code Here"
+    "# Code Here\n",
+    "A[0,0]\n",
+    "A[1,1]"
    ]
   },
   {
@@ -205,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
