--- a/index.ipynb
+++ b/index.ipynb
@@ -138,7 +138,7 @@
    ],
    "source": [
     "# Code Here (due to random data , your output might be different)\n",
-    "np"
+    "A = np.zeroes(3,3) "
    ]
   },
   {
