Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -138,7 +138,8 @@
    ],
    "source": [
     "# Code Here (due to random data , your output might be different)\n",
-    "A = np.zeroes(3,3) "
+    "A = np.zeroes(3,3)\n",
+    "for i,j in A"
    ]
   },
   {
