--- a/index.ipynb
+++ b/index.ipynb
@@ -139,7 +139,8 @@
    "source": [
     "# Code Here (due to random data , your output might be different)\n",
     "A = np.zeroes(3,3)\n",
-    "for i,j in A"
+    "for i,j in A:\n",
+    "    f"
    ]
   },
   {
