--- a/index.ipynb
+++ b/index.ipynb
@@ -135,7 +135,7 @@
    "source": [
     "# Code Here (due to random data , your output might be different)\n",
     "import numpy as np\n",
-    "np.zeros(3,3)\n"
+    "np.zeros([3,3)\n"
    ]
   },
   {
