Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -137,7 +137,7 @@
     "# Code Here (due to random data , your output might be different)\n",
     "import numpy as np\n",
     "A = np.zeros([3,3])\n",
-    "for i in \n"
+    "np.random([)\n"
    ]
   },
   {
