Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -137,7 +137,8 @@
     "# Code Here (due to random data , your output might be different)\n",
     "import numpy as np\n",
     "A = np.zeros([3,3])\n",
-    "np.random([)\n"
+    "for i,j in A: \n",
+    "    \n"
    ]
   },
   {
