--- a/index.ipynb
+++ b/index.ipynb
@@ -138,7 +138,7 @@
     "import numpy as np\n",
     "A = np.zeros([3,3])\n",
     "for i,j in A: \n",
-    "    \n"
+    "    i,j = np.random \n"
    ]
   },
   {
