--- a/index.ipynb
+++ b/index.ipynb
@@ -136,7 +136,7 @@
     "# Code Here (due to random data , your output might be different)\n",
     "import numpy as np\n",
     "A = np.zeros([3,3])\n",
-    "\n",
+    "for i in A\n",
     "    \n"
    ]
   },
