Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -117,16 +117,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0.],\n",
+       "       [0., 0., 0.],\n",
+       "       [0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Code Here (due to random data , your output might be different)\n",
     "import numpy as np\n",
     "A = np.zeros([3,3])\n",
     "for i in A: \n",
-    "    np.random.rand(3,2)\n",
-    "    \n"
+    "    np.random.rand(3,2)"
    ]
   },
   {
