--- a/index.ipynb
+++ b/index.ipynb
@@ -138,7 +138,7 @@
     "import numpy as np\n",
     "A = np.zeros([3,3])\n",
     "for i in A: \n",
-    "    np.random.rand(3,2)"
+    "    A = np.random.rand(3,2)"
    ]
   },
   {
