--- a/index.ipynb
+++ b/index.ipynb
@@ -117,18 +117,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0., 0., 0.],\n",
-       "       [0., 0., 0.],\n",
-       "       [0., 0., 0.]])"
+       "array([[0.23366879, 0.92765505],\n",
+       "       [0.0372303 , 0.12540364],\n",
+       "       [0.49632799, 0.71779767]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,8 @@
     "import numpy as np\n",
     "A = np.zeros([3,3])\n",
     "for i in A: \n",
-    "    A = np.random.rand(3,2)"
+    "    A = np.random.rand(3,2)\n",
+    "A"
    ]
   },
   {
