--- a/index.ipynb
+++ b/index.ipynb
@@ -117,18 +117,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.35832633, 0.37524138],\n",
-       "       [0.8722744 , 0.04919787],\n",
-       "       [0.21310429, 0.64430916]])"
+       "array([[0.33701638, 0.18453792, 0.59093933],\n",
+       "       [0.21350669, 0.18926837, 0.7490523 ],\n",
+       "       [0.69481219, 0.67468215, 0.48731313]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
     "import numpy as np\n",
     "A = np.zeros([3,3])\n",
     "for i in A: \n",
-    "    A = np.random.rand(3,2)\n",
+    "    A = np.random.rand(3,3)\n",
     "A"
    ]
   },
