Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -117,18 +117,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.33701638, 0.18453792, 0.59093933],\n",
-       "       [0.21350669, 0.18926837, 0.7490523 ],\n",
-       "       [0.69481219, 0.67468215, 0.48731313]])"
+       "9"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +136,7 @@
     "import numpy as np\n",
     "A = np.zeros([3,3])\n",
     "for i in A: \n",
-    "    A = np.random.rand(3,3)\n",
+    "    A = np.random.randint(1,10)\n",
     "A"
    ]
   },
