Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -137,7 +137,9 @@
     "import numpy as np\n",
     "A = np.zeros([3,3])\n",
     "for i,j in A: \n",
-    "    A = np.random.randint(1,10)\n"
+    "    A = np.random.randint(1,10)\n",
+    "    \n",
+    "    "
    ]
   },
   {
