Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -136,7 +136,7 @@
     "# Code Here (due to random data , your output might be different)\n",
     "import numpy as np\n",
     "A = np.zeros([3,3])\n",
-    "for i,j in A: \n",
+    "for i in A[] \n",
     "    A = np.random.randint(1,10)\n",
     "    \n",
     "    "
