--- a/index.ipynb
+++ b/index.ipynb
@@ -157,24 +157,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Final output\n",
-      "\n",
-      " [[12.  4. 13.  8.]\n",
-      " [13.  5.  9.  9.]\n",
-      " [11. 11. 11. 17.]\n",
-      " [16. 14.  8. 10.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Code Here (due to random data , your output might be different)"
+    "# Code Here (due to random data , your output might be different)\n",
+    "def fill(matrix):\n",
+    "\n",
+    "    for x in range(0, matrix.shape[0]):\n",
+    "        for y in range(0, matrix.shape[1]):\n",
+    "            matrix[x][y] = random.randrange(1, 10)\n",
+    "    \n",
+    "    return matrix"
    ]
   },
   {
